<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <EditText
        android:id="@+id/edit_text_tasktitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_task"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_taskdetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_edit_text_task_description"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/edit_text_tasktitle"
        tools:visibility="visible" />

    <ImageButton
        android:id="@+id/button_show_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:contentDescription="@string/add_details"
        android:src="@drawable/icon_notes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_taskdetails" />

    <ImageButton
        android:id="@+id/button_star_tasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:contentDescription="@string/add_task_star"
        android:src="@drawable/icon_star"
        app:layout_constraintStart_toEndOf="@id/button_show_details"
        app:layout_constraintTop_toBottomOf="@id/edit_text_taskdetails" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button_text"
        app:layout_constraintBottom_toBottomOf="@id/button_show_details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/button_show_details" />


</androidx.constraintlayout.widget.ConstraintLayout>